--- a/.github/workflows/codecanvas.yml
+++ b/.github/workflows/codecanvas.yml
@@ -7,6 +7,10 @@ on:
       - synchronize
       - reopened
 
+permissions:
+  checks: write
+  contents: read
+  
 jobs:
   check_files:
     runs-on: ubuntu-latest
